<resources>
    <string name="app_name">confApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_btnAgenda">Agenda</string>
    <string name="title_btnMap">Mapy</string>
    <string name="title_btnFacebook">Facebook</string>
    <string name="title_btnInfoConf">Informajce o konferencji</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Has Lo</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="error_invalid_email">Nieprawidłowy adres email</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Nieprawidłowe hasło</string>
    <string name="error_field_required">Wymagane pole</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_agenda2">Agenda2Activity</string>
    <string name="title_activity_gallery">Galeria</string>
    <string name="title_activity_full_image">Zdjęcie</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_news">Aktualności</string>
    <string name="title_activity_conference">Informacje o konferencji</string>
    <string name="title_activity_events_by_day">Wydarzenia</string>
    <string name="title_activity_event_details">Szczegóły wydarzenia</string>
    <string name="title_activity_speakers">Uczestnicy</string>
    <string name="title_activity_calendar">Terminarz</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_plan">Plan</string>
    <string name="title_activity_award">Nagrody</string>
    <string name="nav_about_conference">O konferencji</string>
    <string name="nav_agenda">Agenda</string>
    <string name="nav_speakers">Uczestnicy</string>
    <string name="nav_news">Aktualności</string>
    <string name="nav_maps">Mapy</string>
    <string name="nav_notes">Notatki</string>
    <string name="nav_gallery">Galeria</string>
    <string name="nav_calendar">Terminarz</string>
    <string name="nav_award">Nagrody</string>
    <string name="nav_help">Pomoc</string>
    <string name="nav_contact">Kontakt</string>
    <string name="nav_facebook">Facebook</string>
    <string name="nav_Twitter">Twitter</string>
    <string name="nav_social_media">Media społecznościowe</string>
    <string name="title_activity_base2">Base2Activity</string>
    <string name="title_activity_note_details">NoteDetailsActivity</string>
    <string name="aboutConference">Code Europe is a conference focused on the most important trends in IT. Feel invited, if you want to develop your skills using most up-to-date programming technologies and learn from the top world-class IT practitioners.</string>
    <string name="content_event_details_event_title">Tytuł</string>
    <string name="content_event_details_event_location">Lokalizacja</string>
    <string name="content_event_details_event_date">Data</string>
    <string name="content_event_details_event_speaker">Prelegent</string>
    <string name="content_event_details_event_description">Opis</string>
    <string name="content_event_details_btn_add_note">Dodaj notatkę</string>
    <string name="content_event_details_btn_add_google">Dodaj do Google</string>
    <string name="content_event_details_btn_add_Calendar">Dodaj do terminarza</string>
    <string name="content_contact_title">Kontakt</string>
    <string name="content_contact_text">Marta Piątek   Email: confapp@gmail.com</string>
    <string name="content_contact_btn_message">Napisz wiadomość</string>
    <string name="content_mail_contact_txt_to">confapp@gmail.com</string>
    <string name="content_mail_contact_subject">Temat</string>
    <string name="content_mail_contact_message">Tekst</string>
    <string name="content_mail_contact_btn_send">wyślij</string>
    <string name="content_maps_btn_building_plan">Pokaż plan</string>
    <string name="content_maps_btn_navigation">Pokaż trasę</string>
    <string name="content_speaker_details_speaker_name">Nazwisko</string>
    <string name="content_speaker_details_speaker_description">Opis to jest jakoś opis tej osoby</string>
    <string name="content_speaker_details_speaker_affiliation">Afiliacje</string>
    <string name="dialog_title">Wyjście</string>
    <string name="dialog_text">Czy chcesz wyjść z aplikacji?</string>
    <string name="dialog_btn_yes">Tak</string>
    <string name="dialog_btn_no">Nie</string>
    <string name="event_day_rows_title">Tytuł</string>
    <string name="event_day_rows_speaker">Place</string>
    <string name="event_day_rows_time">godzina</string>
    <string name="event_by_speaker_rows_title">Tytuł</string>
    <string name="nav_header_menu_title">ConfApp</string>
    <string name="news_rows_title">Tytuł</string>
    <string name="news_rows_newsContent">Treść</string>
    <string name="news_rows_place">Miejsce</string>
    <string name="news_rows_date">Data</string>
    <string name="note_title">Wpisz tekst notatki</string>
    <string name="note_btn_save">Zapisz</string>
    <string name="note_btn_cancel">Anuluj</string>
    <string name="note_rows_title">Tytuł</string>
    <string name="note_rows_noteContent">Treść</string>
    <string name="note_rows_date">Data</string>
    <string name="speakers_row_name">Nazwisko</string>
    <string name="speakers_rows_affiliation">Afiliacja</string>
</resources>
