<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:colorBackground="@color/colorBackgroundMenu"

      tools:showIn="navigation_view">

    <group
        android:background="@color/colorBackgroundMenu"
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/nav_aboutConference"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/nav_about_conference"/>
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_menu_agenda"
            android:title="@string/nav_agenda"/>
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/nav_speakers"/>

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_new"
            android:title="@string/nav_news"/>

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/nav_maps"/>
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_note"
            android:title="@string/nav_notes"/>

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_gallery"/>

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/nav_calendar"/>

        <item
            android:id="@+id/nav_awards"
            android:icon="@drawable/ic_menu_awards"
            android:title="@string/nav_award"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/nav_help"/>

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/nav_contact"/>

    </group>

    <item android:title="@string/nav_social_media">
        <menu>
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_menu_facebook"
                android:title="@string/nav_facebook"/>
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/ic_menu_twitter"
                android:title="@string/nav_Twitter"/>
        </menu>
    </item>

</menu>
