<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:orientation="horizontal"
                android:padding="5dip" >


    <TextView
        android:id="@+id/row_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginRight="25dp"

        android:text="@string/news_rows_title"

        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"/>


    <TextView
        android:id="@+id/row_newsContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_title"
        android:layout_marginTop="1dip"


        android:text="@string/news_rows_newsContent"
        android:textColor="#343434"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/row_newsPlace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_title"
        android:layout_marginTop="30dip"



        android:text="@string/news_rows_place"
        android:textColor="#343434"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/row_newsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/row_title"
        android:layout_marginRight="25dp"
        android:gravity="right"

        android:text="@string/news_rows_date"
        android:textColor="#10bcc9"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:text="11-11-2017"/>


</RelativeLayout>