<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_weight="1"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:background="@color/colorBackground"
        android:id="@+id/txtViewNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:gravity="center_horizontal"
        android:text="@string/note_title"
        android:textColor="@color/colorFont"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:background="@color/colorBackground"
        android:id="@+id/txtViewNoteText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:paddingBottom="10dp"
        android:textColor="@color/colorFont"
        android:textSize="14sp"
        />

    <LinearLayout
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/note_btn_save"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/note_btn_cancel"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>
    </LinearLayout>

</LinearLayout>