<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.martapiatek.confapp.SpeakerDetailsActivity"
    tools:showIn="@layout/activity_speaker_details">


    <TextView
        android:id="@+id/txtViewSpeakerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorBackground"
        android:text="@string/content_speaker_details_speaker_name"
        android:textColor="@color/colorFont"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtViewSpeakerCompany"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/txtViewSpeakerCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:text="@string/content_speaker_details_speaker_affiliation"
        android:textColor="@color/colorFont"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewSpeakerDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewSpeakerName"/>


    <TextView
        android:id="@+id/txtViewSpeakerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:text="@string/content_speaker_details_speaker_description"
        android:textColor="@color/colorFont"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/events_list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewSpeakerCompany"/>

    <ListView
        android:id="@+id/events_list_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtViewSpeakerDescription"
        tools:listitem="@layout/events_by_speaker_rows"/>

</android.support.constraint.ConstraintLayout>